[package]
name = "iterator-cache"
authors = ["jay"]
version = "0.1.0"
edition = "2021"
description = "Evaluate and cache iterator values now for future use"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
queues = "1.1.0"
